--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
 body {
 	max-width: 1920px;
 	margin: auto;
+	user-select: none;
 }
 * {
 	font-family: 'Inter';
@@ -90,9 +91,10 @@ body {
 	font-size: 14px;
 }
 
-#gallery {
-	/*	min-height: 100vh; */
+.gallery {
+	display: none;
 }
+
 .title{
 	text-align: center;
 	padding-block: 2em;
@@ -108,6 +110,7 @@ body {
 .nav-pills .nav-link {
 	color: #000
 }
+
 .item-column {
 	position: relative;
 	margin-bottom: 0 !important;
@@ -147,12 +150,14 @@ body {
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
-
+	position: relative;
 }
+
 .quote__author {
 	font-family: Spectral;
 	font-weight: 800;
 	font-size: 22px;
+	position: relative;
 }
 
 #services {
@@ -188,6 +193,10 @@ body {
 	flex-direction: column;
 	justify-content: space-between;
 	z-index: 1;
+}
+
+h3 {
+	font-size: calc(1.275rem + .3vw);
 }
 
 #contact {
@@ -255,7 +264,7 @@ input[type="submit"] {
 		margin-top: 0;
 		margin-bottom: 1em;
 	}
-	#about-me h6, #about-me p {
+	#about-me, #about-me p, .about-me__introduction {
 		width: 100%;
 	}
 }
