--- a/assets/style.css
+++ b/assets/style.css
@@ -105,7 +105,7 @@ body {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: darkgoldenrod;
+  background-color: #936a0b;
 }
 
 .nav-pills .nav-link {
